FEAT: 1. add captcha 2. refactor file structure
