# server/docs/swagger.json
@@ -14,7 +14,49 @@
     },
     "host": "localhost:3000",
     "paths": {
-        "/v1/user/delete": {
+        "/api/v1/auth/captcha": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Generate captcha image",
+                "responses": {
+                    "200": {
+                        "description": "return base64 captcha image",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        " msg": {
+                                            "type": "string"
+                                        },
+                                        "data": {
+                                            "$ref": "#/definitions/response.CaptchaResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/user/delete": {
             "delete": {
                 "consumes": [
                     "application/json"
@@ -33,7 +75,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.DeleteUserReq"
+                            "$ref": "#/definitions/request.DeleteUser"
                         }
                     }
                 ],
@@ -59,7 +101,7 @@
                 }
             }
         },
-        "/v1/user/edit": {
+        "/api/v1/user/edit": {
             "put": {
                 "description": "update user info",
                 "produces": [
@@ -76,7 +118,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.EditUser"
+                            "$ref": "#/definitions/request.EditUser"
                         }
                     }
                 ],
@@ -105,7 +147,7 @@
                 }
             }
         },
-        "/v1/user/register": {
+        "/api/v1/user/register": {
             "post": {
                 "description": "register user",
                 "produces": [
@@ -117,12 +159,12 @@
                 "summary": "Register user",
                 "parameters": [
                     {
-                        "description": "username, password, email, role ID",
+                        "description": "username, password, email,captcha, role ID",
                         "name": "data",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.Register"
+                            "$ref": "#/definitions/request.RegisterUser"
                         }
                     }
                 ],
@@ -151,7 +193,7 @@
                 }
             }
         },
-        "/v1/user/userList": {
+        "/api/v1/user/userList": {
             "get": {
                 "description": "get user list",
                 "consumes": [
@@ -261,7 +303,7 @@
                 }
             }
         },
-        "model.DeleteUserReq": {
+        "request.DeleteUser": {
             "type": "object",
             "required": [
                 "uuid"
@@ -273,7 +315,7 @@
                 }
             }
         },
-        "model.EditUser": {
+        "request.EditUser": {
             "type": "object",
             "required": [
                 "uuid"
@@ -297,9 +339,10 @@
                 }
             }
         },
-        "model.Register": {
+        "request.RegisterUser": {
             "type": "object",
             "required": [
+                "captcha",
                 "email",
                 "password",
                 "username"
@@ -307,6 +350,9 @@
             "properties": {
                 "active": {
                     "type": "integer"
+                },
+                "captcha": {
+                    "type": "string"
                 },
                 "email": {
                     "description": "HeaderImg    string `json:\"headerImg\" gorm:\"default:'https://qmplusimg.henrongyi.top/gva_header.jpg'\"`",
@@ -325,6 +371,14 @@
                     }
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.CaptchaResponse": {
+            "type": "object",
+            "properties": {
+                "captcha": {
                     "type": "string"
                 }
             }
