# server/model/response/authResponse.go
@@ -1,0 +1,5 @@
+package response
+
+type CaptchaResponse struct {
+	Captcha string `json:"captcha"`
+}
